--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,11 @@
       <h2>Filtros</h2>
       <mat-card appearance="outlined">
         <mat-card-content>
-          <form [formGroup]="filterForm">
+          <form *ngIf="filterForm" [formGroup]="filterForm">
             <mat-form-field appearance="outline">
               <mat-label>Tipo de fondo:</mat-label>
-              <mat-select formControlName="fund_type" multiple [placeholder]="funds[0]">
-                <mat-option *ngFor="let fund of funds" [value]="fund">{{fund}}</mat-option>
+              <mat-select formControlName="fund_type" multiple [placeholder]="fundTypes[0].name">
+                <mat-option *ngFor="let fund of fundTypes" [value]="fund">{{fund.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="filterForm.controls['fund_type'].hasError('required')">Elegir al menos un tipo de fondo</mat-error>
             </mat-form-field>
@@ -29,9 +29,9 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="row">
+  </div>
+  <div class="column">
       <h2>Gráficos</h2>
-    </div>
   </div>
 </div>
 <router-outlet />
