data retrieval form with both fund ids and range of dates working now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,9 @@
               <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
           </form>
+          <mat-card-actions>
+          <button mat-stroked-button (click)="onSubmit()">Actualizar datos</button>
+          </mat-card-actions>
         </mat-card-content>
       </mat-card>
     </div>
